--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
             <li><a href="contact.php">Contact</a></li>
         </ul>
     </nav>
+
+    <div class="container">
+        <main>
+            This is new to me
+        </main>
+    </div>
 </body>
 </html>
